Fix WS leak of the consumer